--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -13,12 +13,12 @@
     <% end %>
 
     <div class="actions">
-      <%= link_to tests_path, class: 'btn btn-outline-primary', data: { turbolinks: false } do %>
+      <%= link_to tests_path, class: 'btn btn-outline-dark', data: { turbolinks: false } do %>
         <i class="fa fa-arrow-left" aria-hidden="true"></i>
         Back
       <% end %>
 
-      <%= form.button class: 'btn btn-outline-primary ml-2' do %>
+      <%= form.button class: 'btn btn-outline-success ml-2' do %>
         <i class="fa fa-save" aria-hidden="true"></i>
         Save
       <% end %>
