--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="actions">
-  <%= link_to users_path, class: 'btn btn-outline-primary' do %>
+  <%= link_to users_path, class: 'btn btn-outline-dark' do %>
     <i class="fa fa-arrow-left"></i>
     Back
   <% end %>
