--- a/app/views/tests/_question.html.erb
+++ b/app/views/tests/_question.html.erb
@@ -2,7 +2,7 @@
 
 <div class="question-fields">
   <div class="d-flex">
-    <div class="flex-grow-1">
+    <div class="flex-grow-1 mr-2">
       <%= f.hidden_field :id %>
       <%= f.text_field :content, maxlength: 50,
         class: "form-control", placeholder: "Give the question a label here ..." %>
