--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,11 +7,11 @@
       </ul>
   <% end %>
   <div class="actions">
-    <%= link_to users_path, class: 'btn btn-outline-primary' do %>
+    <%= link_to users_path, class: 'btn btn-outline-dark' do %>
       <i class="fa fa-arrow-left" aria-hidden="true"></i>
       Back
     <% end %>
-    <%= form.button class: 'btn btn-outline-primary ml-2' do %>
+    <%= form.button class: 'btn btn-outline-success ml-2' do %>
       <i class="fa fa-save" aria-hidden="true"></i>
       Save
     <% end %>
